export const snapshot = {};

snapshot[`compilers/esbuild > Successful JSX build 1`] = `
'// lib/component.jsx
import { jsx } from "/node_modules/.pnpm/react@18.2.0/node_modules/react/jsx-runtime.js";
var Component = () => {
  return /* @__PURE__ */ jsx("div", {
    children: "Hello"
  });
};
var component_default = Component;
export {
  component_default as default
};
'
`;

snapshot[`compilers/esbuild > RAILS_ENV=production 1`] = `
'console.log("/lib/foo.js");
//# sourceMappingURL=foo.js.map
'
`;

snapshot[`compilers/esbuild > Import bare module 1`] = `
'// lib/import_node_module.js
import myPackage from "/node_modules/mypackage/index.js";
import isIp from "/node_modules/.pnpm/is-ip@5.0.0/node_modules/is-ip/index.js";
var import_node_module_default = () => {
  myPackage();
  isIp("?");
};
export {
  import_node_module_default as default
};
'
`;

snapshot[`compilers/esbuild > allows returns error on unknown bare module 1`] = `
{
  detail: undefined,
  id: "",
  location: {
    column: 20,
    file: "lib/import_unknown_node_module.js",
    length: 9,
    line: 1,
    lineText: "import unknown from 'unknown'",
    namespace: "",
    suggestion: "",
  },
  notes: [
    {
      location: null,
      text: 'You can mark the path "unknown" as external to exclude it from the bundle, which will remove this error.',
    },
  ],
  pluginName: "resolve",
  text: 'Could not resolve "unknown"',
}
`;

snapshot[`compilers/esbuild > resolves nested node modules 1`] = `
'// node_modules/.pnpm/@react-aria+button@3.6.1_react@18.2.0/node_modules/@react-aria/button/dist/module.js
import { mergeProps as \$cE0pI\$mergeProps, filterDOMProps as \$cE0pI\$filterDOMProps, chain as \$cE0pI\$chain } from "/node_modules/.pnpm/@react-aria+utils@3.13.3_react@18.2.0/node_modules/@react-aria/utils/dist/module.js";
import { useFocusable as \$cE0pI\$useFocusable } from "/node_modules/.pnpm/@react-aria+focus@3.8.0_react@18.2.0/node_modules/@react-aria/focus/dist/module.js";
import { usePress as \$cE0pI\$usePress } from "/node_modules/.pnpm/@react-aria+interactions@3.11.0_react@18.2.0/node_modules/@react-aria/interactions/dist/module.js";
function \$701a24aa0da5b062\$export\$ea18c227d4417cc3(props, ref) {
  let {
    elementType = "button",
    isDisabled,
    onPress,
    onPressStart,
    onPressEnd,
    onPressChange,
    preventFocusOnPress,
    allowFocusWhenDisabled,
    onClick: deprecatedOnClick,
    href,
    target,
    rel,
    type = "button"
  } = props;
  let additionalProps;
  if (elementType === "button")
    additionalProps = {
      type,
      disabled: isDisabled
    };
  else
    additionalProps = {
      role: "button",
      tabIndex: isDisabled ? void 0 : 0,
      href: elementType === "a" && isDisabled ? void 0 : href,
      target: elementType === "a" ? target : void 0,
      type: elementType === "input" ? type : void 0,
      disabled: elementType === "input" ? isDisabled : void 0,
      "aria-disabled": !isDisabled || elementType === "input" ? void 0 : isDisabled,
      rel: elementType === "a" ? rel : void 0
    };
  let { pressProps, isPressed } = \$cE0pI\$usePress({
    onPressStart,
    onPressEnd,
    onPressChange,
    onPress,
    isDisabled,
    preventFocusOnPress,
    ref
  });
  let { focusableProps } = \$cE0pI\$useFocusable(props, ref);
  if (allowFocusWhenDisabled)
    focusableProps.tabIndex = isDisabled ? -1 : focusableProps.tabIndex;
  let buttonProps = \$cE0pI\$mergeProps(focusableProps, pressProps, \$cE0pI\$filterDOMProps(props, {
    labelable: true
  }));
  return {
    isPressed,
    buttonProps: \$cE0pI\$mergeProps(additionalProps, buttonProps, {
      "aria-haspopup": props["aria-haspopup"],
      "aria-expanded": props["aria-expanded"],
      "aria-controls": props["aria-controls"],
      "aria-pressed": props["aria-pressed"],
      onClick: (e) => {
        if (deprecatedOnClick) {
          deprecatedOnClick(e);
          console.warn("onClick is deprecated, please use onPress");
        }
      }
    })
  };
}
function \$55f54f7887471b58\$export\$51e84d46ca0bc451(props, state, ref) {
  const { isSelected } = state;
  const { isPressed, buttonProps } = \$701a24aa0da5b062\$export\$ea18c227d4417cc3({
    ...props,
    onPress: \$cE0pI\$chain(state.toggle, props.onPress)
  }, ref);
  return {
    isPressed,
    buttonProps: \$cE0pI\$mergeProps(buttonProps, {
      "aria-pressed": isSelected
    })
  };
}
export {
  \$701a24aa0da5b062\$export\$ea18c227d4417cc3 as useButton,
  \$55f54f7887471b58\$export\$51e84d46ca0bc451 as useToggleButton
};
'
`;

snapshot[`compilers/esbuild > Import relative module 1`] = `
'// lib/import_relative_module.js
import "/lib/foo.js";
'
`;

snapshot[`compilers/esbuild > Import absolute module 1`] = `
'// lib/import_absolute_module.js
import "/lib/foo.js";
'
`;

snapshot[`compilers/esbuild > Import remote module 1`] = `
'// lib/import_remote_module.js
import emailRegex from "https://esm.sh/email-regex";
'
`;

snapshot[`compilers/esbuild > import map > from json 1`] = `
'// lib/import_map.js
import axios from "https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js";
import { createElement } from "https://esm.sh/react@18.2.0";
import foo from "/lib/foo.js";
axios();
foo();
createElement();
import("https://esm.sh/solid@0.2.1");
'
`;

snapshot[`compilers/esbuild > import map > resolves imports from a node_module 1`] = `
'// node_modules/.pnpm/is-ip@5.0.0/node_modules/is-ip/index.js
import ipRegex from "https://esm.sh/ip-regex";
import { isMatch } from "/node_modules/.pnpm/super-regex@0.2.0/node_modules/super-regex/index.js";
var maxIPv4Length = 15;
var maxIPv6Length = 45;
var options = {
  timeout: 400
};
function isIP(string) {
  return isMatch(ipRegex({ exact: true }), string.slice(0, maxIPv6Length), options);
}
function isIPv6(string) {
  return isMatch(ipRegex.v6({ exact: true }), string.slice(0, maxIPv6Length), options);
}
function isIPv4(string) {
  return isMatch(ipRegex.v4({ exact: true }), string.slice(0, maxIPv4Length), options);
}
function ipVersion(string) {
  return isIP(string) ? isIPv6(string) ? 6 : 4 : void 0;
}
export {
  ipVersion,
  isIP,
  isIPv4,
  isIPv6
};
'
`;

snapshot[`compilers/esbuild > import map > supports scopes 1`] = `
'// lib/import_map/scopes.js
import "/lib/foo2.js";
'
`;

snapshot[`compilers/esbuild > Import relative module without extension 1`] = `
'// lib/import_relative_module_without_extension.js
import foo from "/lib/foo.js";
'
`;

snapshot[`compilers/esbuild > Import absolute module without extension 1`] = `
'// lib/import_absolute_module_without_extension.js
import foo from "/lib/foo.js";
'
`;

snapshot[`compilers/esbuild > Import css module from JS 1`] = `
'// lib/styles.module.css
var e = document.querySelector("#_330940eb");
if (!e) {
  e = document.createElement("style");
  e.id = "_330940eb";
  document.head.appendChild(e);
  e.appendChild(document.createTextNode(\`.myClass330940eb{color:pink}\`));
}
var styles_module_default = { "myClass": "myClass330940eb" };

// lib/import_css_module.js
console.log(styles_module_default);
'
`;

snapshot[`compilers/esbuild > de-dupes side loaded ViewComponent default stylesheet - regular 1`] = `
'// app/components/basic_react_component.module.css
var basic_react_component_module_default = new Proxy({}, { get(target, prop, receiver) {
  if (prop in target || typeof prop === "symbol") {
    return Reflect.get(target, prop, receiver);
  } else {
    return prop + "2566f445";
  }
} });

// app/components/basic_react_component.jsx
import { jsx } from "/node_modules/.pnpm/react@18.2.0/node_modules/react/jsx-runtime.js";
var basic_react_component_default = () => {
  return /* @__PURE__ */ jsx("div", {
    className: basic_react_component_module_default.base,
    children: "Basic React Component"
  });
};
export {
  basic_react_component_default as default
};
'
`;

snapshot[`compilers/esbuild > de-dupes side loaded ViewComponent default stylesheet - sidecar 1`] = `
'// app/components/basic_react/component.module.css
var component_module_default = new Proxy({}, { get(target, prop, receiver) {
  if (prop in target || typeof prop === "symbol") {
    return Reflect.get(target, prop, receiver);
  } else {
    return prop + "c46dc2fd";
  }
} });

// app/components/basic_react/component.jsx
import { jsx } from "/node_modules/.pnpm/react@18.2.0/node_modules/react/jsx-runtime.js";
var component_default = () => {
  return /* @__PURE__ */ jsx("div", {
    className: component_module_default.base,
    children: "Basic React Component"
  });
};
export {
  component_default as default
};
'
`;

snapshot[`compilers/esbuild > Import css from JS 1`] = `
'// app/views/layouts/application.css
var e = document.querySelector("#_6d24c769");
if (!e) {
  e = document.createElement("style");
  e.id = "_6d24c769";
  document.head.appendChild(e);
  e.appendChild(document.createTextNode(\`body{color:pink}.name{color:#000}
\`));
}
'
`;

snapshot[`compilers/esbuild > Import css from jsx 1`] = `
'// app/views/layouts/application.css
var e = document.querySelector("#_6d24c769");
if (!e) {
  e = document.createElement("style");
  e.id = "_6d24c769";
  document.head.appendChild(e);
  e.appendChild(document.createTextNode(\`body{color:pink}.name{color:#000}
\`));
}
'
`;

snapshot[`compilers/esbuild > bundled js import 1`] = `
'// lib/foo.js?bundle
console.log("/lib/foo.js");

// lib/foo2.js?bundle
console.log("/lib/foo2.js");

// lib/foo3.js?bundle
console.log("/lib/foo3.js");

// node_modules/mypackage/index.js?bundle
console.log("node_modules/mypackage");

// lib/bundle_import/foo.js?bundle
console.log("bundle_import/foo.js");

// lib/component.jsx?bundle
import { jsx } from "/node_modules/.pnpm/react@18.2.0/node_modules/react/jsx-runtime.js";
var Component = () => {
  return /* @__PURE__ */ jsx("div", {
    children: "Hello"
  });
};
var component_default = Component;

// lib/bundle_import/index.js
import emailRegex from "https://esm.sh/email-regex";
import emailRegex2 from "https://esm.sh/email-regex?bundle";
component_default();
emailRegex();
emailRegex2();
'
`;

snapshot[`compilers/esbuild > bundled css import 1`] = `
'@import "https://esm.sh/@radix-ui/colors@0.1.8/blue.css?bundle";
@import "https://esm.sh/@radix-ui/colors@0.1.8/gray.css";

/* lib/foo.css?bundle */
body {
  color: red;
}
body h1 {
  color: #00f;
}

/* node_modules/mypackage/styles.css?bundle */
.mypackage {
  color: red;
}

/* lib/styles.module.css?bundle */
.myClass330940eb {
  color: pink;
}

/* lib/bundle_import.css */
header {
  color: pink;
}
'
`;
